--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-core.Microsoft*
-core.mongo*
-core.python*
-__pycache__/
-*.py[cod]
-.github/
-cloudinary_python.txt
-env.py
+*.sqlite3
+*.pyc
+__pycache__
+*env.py
